Update workflow triggers to include manual dispatch alongside push events

--- a/.github/workflows/06-contexts.yaml
+++ b/.github/workflows/06-contexts.yaml
@@ -1,6 +1,8 @@
 name: 06 - Contexts
 
-on: push
+on: 
+  push:
+  workflow_dispatch:
 
 jobs:
   echo:
@@ -19,4 +21,3 @@ jobs:
       - name: Retrieve Variable
         run: | 
           echo "Variable value: ${{ vars.MY_VAR }}"
-          
