--- a/.github/workflows/06-contexts.yaml
+++ b/.github/workflows/06-contexts.yaml
@@ -8,7 +8,7 @@ jobs:
   echo:
     runs-on: ubuntu-latest
     steps:
-      - name: Echo
+      - name: Display Information
         run: |
           echo "Event name: ${{ github.event_name }}"
           echo "Ref: ${{ github.ref }}"
