--- a/.github/workflows/13-chaching.yaml
+++ b/.github/workflows/13-chaching.yaml
@@ -7,6 +7,14 @@ on:
         type: boolean
         description: "Use cache"
         default: true
+      node-version:
+        type: choice
+        description: "Node version"
+        options:
+          - 18.x
+          - 20.x
+          - 21.x
+        default: 20.x
 
 jobs:
   build:
@@ -20,7 +28,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: ${{ inputs.node-version }}
       - name: Install dependencies
         run: npm ci
       - name: Testing
