--- a/.github/workflows/13-chaching.yaml
+++ b/.github/workflows/13-chaching.yaml
@@ -17,11 +17,40 @@ on:
         default: 20.x
 
 jobs:
+  install-deps:
+    defaults:
+      run:
+        working-directory: 13-caching/react-app
+    outputs:
+      deps-cache-key: ${{ steps.cache-key.outputs.CACHE_KEY }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ inputs.node-version }}
+      - name: Calculate cache key
+        id: cache-key
+        run: |
+          echo "CACHE_KEY=deps-node-modules-${{ hashFiles('13-caching/react-app/package-lock.json') }}" >> $GITHUB_OUTPUT
+      - name: Download cached dependencies
+        uses: actions/cache@v4
+        id: cache
+        if: ${{ inputs.use-cache }}
+        with: 
+          path: 13-caching/react-app/node_modules
+          key: ${{ steps.cache-key.outputs.CACHE_KEY }}
+      - name: Install dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: npm ci
   build:
     defaults:
       run:
         working-directory: 13-caching/react-app
     runs-on: ubuntu-latest
+    needs: install-deps
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -35,7 +64,7 @@ jobs:
         if: ${{ inputs.use-cache }}
         with: 
           path: 13-caching/react-app/node_modules
-          key: deps-node-modules-${{ hashFiles('13-caching/react-app/package-lock.json') }}
+          key: ${{ needs.install-deps.outputs.deps-cache-key }}
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
         run: npm ci
