fix dependecies for workflow 14

--- a/.github/workflows/14-artifacts.yaml
+++ b/.github/workflows/14-artifacts.yaml
@@ -40,7 +40,8 @@ jobs:
         with:
           name: app
           path: 14-artifacts/react-app/build
-  debploy:
+  debloy:
+    needs: test-build
     runs-on: ubuntu-latest
     steps:
       - name: Download artifact
