--- a/.github/workflows/14-artifacts.yaml
+++ b/.github/workflows/14-artifacts.yaml
@@ -30,7 +30,7 @@ jobs:
           key: ${{ steps.cache-key.outputs.CACHE_KEY }}
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
-        run: npm 
+        run: npm ci
       - name: Unit tests
         run: npm test
       - name: Build code
